tests/baselines/reference/numericIndexerConstraint5.errors.txt
tests/cases/compiler/numericIndexerConstraint5.ts(2,5): error TS2322: Type '{ name: string; 0: Date; }' is not assignable to type '{ [name: number]: string; }'.
  Property '0' is incompatible with index signature.
    Type 'Date' is not assignable to type 'string'.


==== tests/cases/compiler/numericIndexerConstraint5.ts (1 errors) ====
    var x = { name: "x", 0: new Date() };
    var z: { [name: number]: string } = x;
        ~
!!! error TS2322: Type '{ {|name|0|}: string; {|0|1|}: {|Date|2|}; }' is not assignable to type '{ [name: number]: string; }'.
!!! error TS2322:   Property '0' is incompatible with index signature.
!!! error TS2322:     Type '{|Date|3|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/numericIndexerConstraint5.ts:1:11
!!! annotated symbol 1 tests/cases/compiler/numericIndexerConstraint5.ts:1:22
!!! annotated symbol 2 /.ts/lib.es5.d.ts:729:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:729:11